src/App.scss
main {
  background-color: rgba(110, 86, 218, 0.4);
}

header {
  background-color: rgba(94, 74, 182, 0.5);
  color: white;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: .8rem;
  max-width: 100vw;
  height: 5vh;
  padding-top: 1vh;
  padding-bottom: 1vh;

  div {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
  }

  nav {
    position: fixed;
    background-color: rgba(36, 25, 87, 0.9);
    padding: 5%;
    transform: translateX(+1000%);
    transition: transform 0.3s ease-in-out;
    height: 100vh;
    right: 0;
    top: 0;
    z-index: 9999;
    border-left: .5px solid white;

    svg {
      float: right;
      border: solid 1px black;
      border-radius: 50%;
      padding: 3%;
      background-color: black;
    }

    ul {
      list-style: none;
      margin-top: 5vh;

      li {
        margin-top: 5%;
      }
    }
  }

  .active {
    transform: translateX(0);
  }
}

video {
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  overflow-x: hidden;
}

.home-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 93vh;

  .home {
    color: white;
    font-family: 'Alumni Sans Pinstripe', sans-serif;
    font-size: 1.1em;
    width: 100%;
    height: fit-content;
    border-radius: 5px;
    text-align: center;
    letter-spacing: 3px;

    h2 {
      font-size: 3rem;
      animation: leftFadeIn 2s;

      span {
        display: inline-block;
        animation: wave 2s infinite;
        animation-delay: 2s;
      }
    }

    h3 {
      span {
        div {
          color: rgb(0, 132, 255);
        }
      }
    }

    .button {
      background-color: rgb(0, 132, 255);
      color: white;
      border: none;
      border-radius: 5px;
      padding: 1%;
      font-size: 1.1em;
      font-family: 'Alumni Sans Pinstripe', sans-serif;
      font-weight: 600;
      cursor: pointer;
      transition: transform 0.3s ease-in-out;
      animation: rightFadeIn 2s;
      margin-top: 5%;
      text-decoration: none;
      display: inline-block;
    }
  }

  .arrow {
    margin-top: 10%;
    height: 30%;
    width: auto;
    cursor: pointer;
    animation: arrow 2s infinite;
    animation-delay: 3s;

    fill: rgb(0, 132, 255);
  }
}

.about-wrapper {
  width: 100vw;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;

  .about {
    font-family: 'Alumni Sans Pinstripe', sans-serif;
    color: rgb(177, 177, 177);
    letter-spacing: 1px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    .about-heading {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: center;

      svg {
        width: 80vw;
        height: 30vw;
      }
    }

    .about-info {
      text-align: justify;
      font-size: larger;
      padding: 5%;
      // overflow: scroll;

      p {
        font-size: 1.2em;
      }

      .trybe {
        color: #00ff15;
        font-size: larger;
      }

      .estacio {
        color: #13B4E9;
        font-size: larger;
      }
    }

    h4 {
      margin-top: 2%;
    }

    hr {
      width: 50%;
      margin-top: 2%;
      margin-bottom: 2%;
    }

  }
}

.tech-wrapper {
  font-family: 'Alumni Sans Pinstripe', sans-serif;
  color: white;
  text-align: center;
  width: 100vw;
  height: fit-content;

  .tech {
    font-size: 1.2em;

    .tech-list {
      display: flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
      flex-wrap: wrap;
      flex-grow: 1;
      width: 100%;
      height: 100%;
      margin-top: 5%;

      .tech-item {
        display: flex;
        justify-content: center;
        align-items: center;
        background-color: rgba(110, 86, 218, 0.4);
        border-radius: 5px;
        width: 4em;
        height: auto;
        padding: 2%;
        margin: 1%;

        svg {
          width: 6em;
          height: 6em;
        }
      }

      .tech-item:hover {
        background-color: rgba(110, 86, 218, 0.8);
        overflow: hidden;

        svg {
          transform: scale(1.1);
        }
      }
    }
  }
}

.projects-wrapper {
  width: 100vw;
  height: fit-content;
  font-family: 'Alumni Sans Pinstripe', sans-serif;
  color: white;
  text-align: center;
  margin-top: 15%;

  h2 {
    margin-bottom: 5%;
  }

  .projects {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    width: fit-content;
    height: 100%;
    max-height: 100%;

    .project-card {
      background-color: rgba(110, 86, 218, 0.4);
      border-radius: 5px;
      width: fit-content;
      height: fit-content;
      padding: 1%;
      margin: 5%;
      width: 95%;

      .project-image {
        overflow: hidden;
        width: 100%;
        height: 10em;
      }

      .project-info {
        width: 100%;
        height: fit-content;

        h3 {
          margin-top: 5%;
        }

        .project-tags {
          display: flex;
          flex-direction: row;
          justify-content: space-around;
          align-items: center;
          flex-wrap: wrap;
          margin: 5%;
          height: fit-content;
          font-family: monospace;
          color: black;
          font-weight: 900;
          border-radius: 5px;

          span {
            padding: 1%;
            margin: 1%;
            border-radius: 5px;
            background-color: whitesmoke;
          }
        }
      }
    }
  }
}

.contact-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-image: linear-gradient(to bottom, rgba(110, 86, 218, 0), rgb(0, 119, 255));
  font-family: 'Alumni Sans Pinstripe', sans-serif;
  text-align: center;

  .contact {
    color: white;
  }
}

@keyframes arrow {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes leftFadeIn {
  0% {
    opacity: 0;
    transform: translateX(-100%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes wave {
  0% {}

  50% {
    transform: rotate(-20deg);
  }

  75% {
    transform: rotate(+20deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

